// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`all if tags 1`] = `
<i>
  test1
</i>
`;

exports[`all if tags 2`] = `
<i>
  test3
</i>
`;

exports[`all if tags 3`] = `
<i>
  else
</i>
`;

exports[`if and else 1`] = `
<i>
  test1
</i>
`;

exports[`if and else 2`] = `
<i>
  else
</i>
`;

exports[`if and else 3`] = `
<i>
  test1
</i>
`;

exports[`if and else 4`] = `
<i>
  test3
</i>
`;

exports[`only if 1`] = `
<i>
  test1
</i>
`;
